[tool.poetry]
name = "kg"
version = "0.1.0"
description = ""
authors = ["Dmitry Nesmeyanov <miradg99@gmail.com>",
            "Mahmutov Rinat <talverinat@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
rdflib = "^7.0.0"
black = "^23.12.0"
isort = "^5.13.1"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
sparqlwrapper = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
