[tool.poetry]
name = "fourthstep"
version = "0.1.0"
description = ""
authors = ["Harwyy <my-apple-good@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
rdflib = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
