[tool.poetry]
name = "kg-civ6"
version = "0.0.1"
description = ""
authors = ["egn_bazhenov"]
readme = "README.md"
packages = [{ include = 'src/' }]

[tool.poetry.dependencies]
python = "3.11.9"
click = "^8.1.7"
coverage = "^7.5.1"
flake8 = "^7.0.0"
black = "^24.4.2"
flake8-bugbear = "^24.4.26"
requests = "^2.31.0"
pydocstyle = "^6.3.0"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240622"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
beautifulsoup4 = "^4.12.3"
rdflib = "^7.1.1"
owlready2 = "^0.47"
sparqlwrapper = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
